--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@npmcli/map-workspaces": "^2.0.3",
     "@npmcli/package-json": "^2.0.0",
     "@npmcli/run-script": "^3.0.1",
+    "@supercharge/promise-pool": "^2.2.0",
     "abbrev": "~1.1.1",
     "archy": "~1.0.0",
     "cacache": "^16.1.0",
